# better-xescoding-helper

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: novel_example.txt  try_features.py
frontend/: frontend.js  index.html  styles.gen.css
frontend/webui/: App.tsx  build.ts  frontend.tsx  package.json  style.css  styles.gen.css
src/: config.rs  frontend.rs  health.rs  history.rs  logger.rs  main.rs  settings.rs  state.rs
src/ai/: client.rs  explain.rs  mod.rs
src/dep_graph/: mod.rs
src/download/: assets.rs
src/http/: cors.rs  handlers.rs  handlers_extra.rs  handlers_v2.rs  mod.rs  port.rs  router.rs
src/python/: code_blocks.rs  config.rs  danger.rs  exec.rs  exec_golang.rs  exec_novel.rs  exec_python.rs  exec_typescript.rs  imports.rs  lib_list.rs  lint.rs  metrics.rs  mod.rs  novel_theme.rs  package.rs  package_manager.rs  prewarm.rs  runner.rs  runner_pool.rs  venv.rs
src/sandbox/: backend.rs  mod.rs  report.rs
src/updater/: github.rs  mod.rs  self_update.rs
src/utils/: cache_cleaner.rs  executor.rs  flex.rs  log_buffer.rs  mod.rs  process_stats.rs  retry.rs
src/websocket/: danger.rs  mod.rs  webtty.rs
