[package]
name = "xescoding-helper"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "xescoding_helper"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate", "stream"] }
md-5 = "0.11"
rust-embed = "8"
regex = "1"
base64 = "0.22"
rand = "0.10"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
futures-util = "0.3"
tokio-stream = "0.1"
once_cell = "1"
mime_guess = "2"
which = "8"
sysinfo = { version = "0.31", default-features = false, features = ["system"] }
rusqlite = { version = "0.32", features = ["bundled"] }
semver = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
